# Multiple-Personality-Chatbot-

./: .gitignore  README.md  docker-compose.yml  main.py
.github/workflows/: cd.yml  ci.yml
chatbot-api/: .env.example  Dockerfile  Makefile  async.py  langgraph.json  pyproject.toml  temp.py
chatbot-api/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
chatbot-api/src/mpdagents/: config.py
chatbot-api/src/mpdagents/application/conversation_service/: generate_response.py  reset_conversation.py
chatbot-api/src/mpdagents/application/conversation_service/workflow/: __init__.py  chains.py  egdes.py  graph.py  node.py  state.py
chatbot-api/src/mpdagents/application/rag/: rag.py
chatbot-api/src/mpdagents/domain/: character.py  character_factory.py  exceptions.py  prompts.py
chatbot-api/src/mpdagents/infrastructure/: api.py  opik_utils.py
chatbot-api/src/mpdagents/infrastructure/mongodb/: client.py
chatbot-ui/: Dockerfile  app.py  pyproject.toml
kubernetes/: api-deployment.yaml  secrets.yaml  ui-deployment.yaml
