[project]
name = "chatbot-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "langchain>=0.3.27",
    "langchain-core>=0.3.72",
    "langchain-openai>=0.3.28",
    "langgraph>=0.5.4",
    "langgraph-checkpoint-mongodb>=0.1.4",
    "langsmith>=0.4.8",
    "openai>=1.97.1",
    "opik>=1.8.9",
    "pandas>=2.3.1",
    "pinecone>=7.3.0",
    "streamlit>=1.47.1",
]

[dependency-groups]
dev = [
    "directory-tree>=1.0.0",
    "langgraph-cli[inmem]>=0.3.6",
    "ruff>=0.12.5",
]
